<package>
  <name>multi_level_map</name>
  <version>0.1.2</version>
  <description> Metapackage which pulls in all the other packages required to run a multi level map server and perform multi level map manipulations.</description>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/multi_level_map</url>
  <url type="repository">https://github.com/utexas-bwi/multi_level_map</url>
  <url type="bugtracker">https://github.com/utexas-bwi/multi_level_map/issues</url>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>multi_level_map_msgs</run_depend>
  <run_depend>multi_level_map_server</run_depend>
  <run_depend>multi_level_map_utils</run_depend>

  <export>
    <metapackage/>
    <architecture_independent/>
  </export>

</package>
