<package>
  <name>multi_level_map_server</name>
  <version>0.0.2</version>
  <description>multi_level_map_server</description>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/multi_level_map_server</url>
  <!-- <url type="bugtracker"></url> -->

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Piyush Khandelwal</author>
  <author>Jake Menashe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>multi_level_map_msgs</run_depend>
  <run_depend>multi_level_map_utils</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
