<package>
  <name>multi_level_map_utils</name>
  <version>0.0.2</version>
  <description>multi_level_map_utils</description>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/multi_level_map_utils</url>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>
  <author>Piyush Khandelwal</author>
  <author>Jake Menashe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>

</package>
